config/traefik/templates/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    gethomepage.dev/href: "https://traefik.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Ingress
    gethomepage.dev/group: System
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/name: Traefik
    gethomepage.dev/app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
